--- a/src/app/pages/counters/counters.page.html
+++ b/src/app/pages/counters/counters.page.html
@@ -41,7 +41,7 @@
       <ion-col>
         <ion-card>
           <ion-card-content>
-            <h1>{{countersCalculated.total}}</h1>
+            <h1>{{countersExtentionObject.total}}</h1>
           </ion-card-content>
         </ion-card>
         <ion-card>
@@ -49,47 +49,47 @@
             <ion-grid class="information-grid">
               <ion-row>
                 <ion-col>
-                  <ion-text>Amount done today: {{countersCalculated.amountDoneToday}}</ion-text>
+                  <ion-text>Amount done today: {{countersExtentionObject.amountDoneToday}}</ion-text>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <ion-text>Start time today: {{countersCalculated.startTimeToday | date:'HH:mm'}}</ion-text>
+                  <ion-text>Start time today: {{countersExtentionObject.startTimeToday | date:'HH:mm'}}</ion-text>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <ion-text>End time today: {{countersCalculated.endTimeToday | date:'HH:mm'}}</ion-text>
+                  <ion-text>End time today: {{countersExtentionObject.endTimeToday | date:'HH:mm'}}</ion-text>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <ion-text>Time spend: {{countersCalculated.timeBetweenToday | date:'HH:mm'}}</ion-text>
+                  <ion-text>Time spend: {{countersExtentionObject.timeBetweenToday | date:'HH:mm'}}</ion-text>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <ion-text>Units left: {{countersCalculated.unitsLeft}}</ion-text>
+                  <ion-text>Units left: {{countersExtentionObject.unitsLeft}}</ion-text>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <ion-text>Experience currently: {{countersCalculated.experienceCurrently}}%</ion-text>
+                  <ion-text>Experience currently: {{countersExtentionObject.experienceCurrently}}%</ion-text>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <ion-text>Experience per unit: {{countersCalculated.experiencePerUnit}}%</ion-text>
+                  <ion-text>Experience per unit: {{countersExtentionObject.experiencePerUnit}}%</ion-text>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <ion-text>Experience per 10 units: {{countersCalculated.experiencePer10Unit}}%</ion-text>
+                  <ion-text>Experience per 10 units: {{countersExtentionObject.experiencePer10Unit}}%</ion-text>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <ion-text>Amount to do for 1%: {{countersCalculated.amountToDoFor1Percent}} units</ion-text>
+                  <ion-text>Amount to do for 1%: {{countersExtentionObject.amountToDoFor1Percent}} units</ion-text>
                 </ion-col>
               </ion-row>
             </ion-grid>
