--- a/src/app/pages/missions/update-mission/update-mission.page.html
+++ b/src/app/pages/missions/update-mission/update-mission.page.html
@@ -44,7 +44,7 @@
         <ion-label position="stacked">
           Description
         </ion-label>
-        <ion-input required type="text" formControlName="description"></ion-input>
+        <ion-input type="text" formControlName="description"></ion-input>
       </ion-item>
     </ion-list>
     <div className="ion-padding">
