--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -14,17 +14,22 @@
     <div *ngFor="let appSetting of appSettings">
       <ion-item *ngIf="appSetting.name == SettingTypes[SettingTypes.SHOULD_SCROLL_UP]">
         <ion-label>Scrolls up on tab switch mission view</ion-label>
-        <ion-toggle> [checked]="setting.value" (ionChange)="updateSetting(setting)"></ion-toggle>
+        <ion-toggle [checked]="appSetting.value == '1'"
+          (ionChange)="appSetting.value = $event.detail.checked ? '1' : '0'">
+        </ion-toggle>
       </ion-item>
 
       <ion-item *ngIf="appSetting.name == SettingTypes[SettingTypes.SHOW_MISSION_COMPLETED_COLOR]">
         <ion-label>Show color if a mission is complete</ion-label>
-        <ion-toggle> [checked]="setting.value" (ionChange)="updateSetting(setting)"></ion-toggle>
+        <ion-toggle [checked]="appSetting.value == '1'"
+          (ionChange)="appSetting.value = $event.detail.checked ? '1' : '0'">
+        </ion-toggle>
       </ion-item>
 
       <ion-item *ngIf="appSetting.name == SettingTypes[SettingTypes.THEME]">
         <ion-label>Color Themes:</ion-label>
-        <ion-select placeholder="{{appSetting.value}}" [value]="appSetting.value">
+        <ion-select placeholder="{{appSetting.value}}" [value]="appSetting.value"
+          (ionChange)="appSetting.value = $event.target.value">
           <ion-select-option *ngFor="let theme of ColorThemes | enumToArray" [value]="theme.name">{{theme.name}}
           </ion-select-option>
         </ion-select>
@@ -32,7 +37,8 @@
 
       <ion-item *ngIf="appSetting.name == SettingTypes[SettingTypes.FONT]">
         <ion-label>Font Themes:</ion-label>
-        <ion-select placeholder="{{appSetting.value}}" [value]="appSetting.value">
+        <ion-select placeholder="{{appSetting.value}}" [value]="appSetting.value"
+          (ionChange)="appSetting.value = $event.target.value">
           <ion-select-option *ngFor="let theme of FontThemes | enumToArray" [value]="theme.name">{{theme.name}}
           </ion-select-option>
         </ion-select>
