--- a/src/app/components/flipper/flipper.component.html
+++ b/src/app/components/flipper/flipper.component.html
@@ -4,7 +4,7 @@
       <div class="flippy-card flippy-front {{customFrontCss}}" style="transition-duration: 0.6s;">
         <ng-content select="[front]"></ng-content>
       </div>
-      <div class="flippy-card flippy-back" style="transition-duration: 0.6s;">
+      <div class="flippy-card flippy-back {{customBackCss}}" style="transition-duration: 0.6s;">
         <ng-content select="[back]"></ng-content>
       </div>
     </div>
