--- a/src/scss/custom-swiper.scss
+++ b/src/scss/custom-swiper.scss
@@ -55,7 +55,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100%;
+  height: auto !important;
   font-size: 18px;
   box-sizing: border-box;
 }
