--- a/src/app/test/hometests/hometests.page.html
+++ b/src/app/test/hometests/hometests.page.html
@@ -14,10 +14,10 @@
   </ion-header>
 
   <div id="container">
-    <ion-button routerLink='/products' routerDirection="forward" color='tertiary' expand="block">
-      Products crud example --- Database name: {{environmentDatabase}}
-    </ion-button>
     <div *ngIf="isDisplay">
+      <ion-button routerLink='/products' routerDirection="forward" color='tertiary' expand="block">
+        Products crud example --- Database name: {{environmentDatabase}}
+      </ion-button>
       <ion-button *ngIf="native" routerLink='/setsecuresecret' routerDirection="forward" color='primary' expand="block">
         Test Set Secure Secret</ion-button>
       <ion-button *ngIf="native" routerLink='/changesecuresecret' routerDirection="forward" color='primary'
@@ -26,6 +26,8 @@
       </ion-button>
       <ion-button *ngIf="exConn" routerLink='/existingconnection' routerDirection="forward" color='primary'
         expand="block">Test Existing Connection</ion-button>
+        <ion-button routerLink='/testreadonly' routerDirection="forward" color='primary' expand="block">Test Read-Only
+        </ion-button>
       <ion-button routerLink='/testIssue230' routerDirection="forward" color='primary' expand="block">Test Issue#230
       </ion-button>
       <ion-button routerLink='/upgradeversion' routerDirection="forward" color='primary' expand="block">Test Upgrade
@@ -43,6 +45,8 @@
         Assets</ion-button>
       <ion-button *ngIf="native" routerLink='/downloadtocacheandmove' routerDirection="forward" color='primary' expand="block">
         Test Download Cache & Move</ion-button>
+      <ion-button  routerLink='/downloadfromhttp' routerDirection="forward" color='primary' expand="block">
+        Test Download from HTTP</ion-button>
       <ion-button routerLink='/json71' routerDirection="forward" color='primary' expand="block">Test Json #71
       </ion-button>
       <ion-button *ngIf="native" routerLink='/copy' routerDirection="forward" color='primary' expand="block">Test
