--- a/src/app/pages/missions/create-mission/create-mission.page.html
+++ b/src/app/pages/missions/create-mission/create-mission.page.html
@@ -16,7 +16,7 @@
         <ion-label position="stacked">
           Mission Name <ion-text color="danger">*</ion-text>
         </ion-label>
-        <ion-input required type="text" formControlName="name"></ion-input>
+        <ion-input required type="text" formControlName="name" tabindex="1"></ion-input>
       </ion-item>
       <div class="validation-errors">
         <ng-container *ngFor="let validation of validation_messages.name">
@@ -30,7 +30,7 @@
         <ion-label position="stacked">
           Amount To Reach <ion-text color="danger">*</ion-text>
         </ion-label>
-        <ion-input required type="number" formControlName="endAmount"></ion-input>
+        <ion-input required type="number" formControlName="endAmount" tabindex="2"></ion-input>
       </ion-item>
       <div class="validation-errors">
         <ng-container *ngFor="let validation of validation_messages.endAmount">
@@ -44,11 +44,11 @@
         <ion-label position="stacked">
           Description
         </ion-label>
-        <ion-input type="text" formControlName="description"></ion-input>
+        <ion-input type="text" formControlName="description" tabindex="3"></ion-input>
       </ion-item>
     </ion-list>
     <div className="ion-padding">
-      <ion-button expand="block" type="submit" [disabled]="form.invalid">
+      <ion-button expand="block" type="submit" [disabled]="form.invalid" tabindex="4">
         Create mission
       </ion-button>
     </div>
