--- a/src/app/pages/missions/missions.page.scss
+++ b/src/app/pages/missions/missions.page.scss
@@ -4,3 +4,18 @@
   color: var(--ion-color-success,#3dbd23 );
   vertical-align: middle;
  }
+
+ @media (prefers-color-scheme: dark) {
+  :root {
+    .segment-button-checked {
+      color: white;
+     }
+  }
+}
+
+body.dark {
+  .segment-button-checked {
+    color: white;
+   }
+}
+
