--- a/src/app/pages/counters/counters.page.html
+++ b/src/app/pages/counters/counters.page.html
@@ -12,15 +12,16 @@
 <ion-content>
   <ion-grid class="ion-margin ion-text-center">
     <ion-row>
+      <!-- todo in one array -->
       <ion-col *ngFor="let x of [1,2,3,4,5]">
-        <ion-button (click)="onCreateCounter(x)">
+        <ion-button (click)="onNumberButton(x)">
           {{x}}
         </ion-button>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col *ngFor="let x of [6,7,8,9,10]">
-        <ion-button (click)="onCreateCounter(x)">
+        <ion-button (click)="onNumberButton(x)">
           {{x}}
         </ion-button>
       </ion-col>
