--- a/src/global.scss
+++ b/src/global.scss
@@ -28,6 +28,7 @@
 /* swiper */
 @import '~swiper/scss';
 @import 'scss/custom-swiper.scss';
+@import 'scss/custom-picker.scss';
 
 
 .validation-errors {
