--- a/src/global.scss
+++ b/src/global.scss
@@ -42,3 +42,13 @@ html,body {
     color: red;
   }
 }
+
+ion-toolbar {
+  --background: var(--ion-color-toolbar-background);
+  --color: var(--ion-color-toolbar-color);
+}
+
+ion-button {
+  --background: var(--ion-color-button-background);
+  --color: var(--ion-color-button-color);
+}
