--- a/src/app/pages/counters/counters.page.html
+++ b/src/app/pages/counters/counters.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="title">
+  <ion-toolbar>
     <ion-title>{{mission.name}}</ion-title>
     <ion-buttons slot="start">
       <ion-button [routerLink]="['/missions']">
