--- a/src/app/pages/missions/create-mission/create-mission.page.html
+++ b/src/app/pages/missions/create-mission/create-mission.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="title">
+  <ion-toolbar>
     <ion-title>Create Mission</ion-title>
     <ion-buttons slot="start">
       <ion-button [routerLink]="['/missions']">
@@ -48,7 +48,7 @@
       </ion-item>
     </ion-list>
     <div className="ion-padding">
-      <ion-button expand="block" type="submit" [disabled]="form.invalid" tabindex="4">
+      <ion-button expand="block" class="ion-margin" type="submit" [disabled]="form.invalid" tabindex="4">
         Create mission
       </ion-button>
     </div>
