--- a/src/app/pages/missions/missions.page.html
+++ b/src/app/pages/missions/missions.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="title">
+  <ion-toolbar>
     <ion-title>Mission List</ion-title>
     <ion-buttons slot="end">
       <ion-button id="popover-button">
