--- a/src/global.scss
+++ b/src/global.scss
@@ -29,6 +29,7 @@
 @import '~swiper/scss';
 @import 'scss/custom-swiper.scss';
 @import 'scss/custom-picker.scss';
+@import 'scss/custom-alert.scss';
 
 
 html,body {
