--- a/src/app/pages/counters/counters.page.html
+++ b/src/app/pages/counters/counters.page.html
@@ -25,11 +25,10 @@
         <form [formGroup]="differentAmountForm" (ngSubmit)="onAddDifferentCounter()">
           <ion-list>
             <ion-item>
-              <ion-label align="center">Add a different amount</ion-label>
+              <ion-label>Add a different amount</ion-label>
             </ion-item>
             <ion-item>
-              <ion-input type="number" placeholder="Enter amount" formControlName="amount" [clearInput]="true"
-                align="center">
+              <ion-input type="number" placeholder="Enter amount" formControlName="amount" [clearInput]="true">
               </ion-input>
             </ion-item>
           </ion-list>
@@ -59,7 +58,7 @@
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <ion-text>End time today: {{countersCalculation.endTimeToday | date:'HH:mm'}}</ion-text>
+                  <ion-text>End time today: {{countersCalculation.endTimeToday | date:'HH:mm:'}}</ion-text>
                 </ion-col>
               </ion-row>
               <ion-row>
@@ -99,8 +98,36 @@
     </ion-row>
 
 
+    <!-- button filter options -->
+    <ion-row>
+      <ion-col>
+        <ion-button (click)="onFilterButton('all')" expand="block" [disabled]="selectedButton === 'all'">
+          All
+        </ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button (click)="onFilterButton('today')" expand="block" [disabled]="selectedButton === 'all'">
+          Today
+        </ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button (click)="onFilterButton('week')" expand="block" [disabled]="selectedButton === 'all'">
+          Week
+        </ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button (click)="onFilterButton('month')" expand="block" [disabled]="selectedButton === 'all'">
+          Month
+        </ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button (click)="onFilterButton('custom')" expand="block" [disabled]="selectedButton === 'custom'">
+          Custom
+        </ion-button>
+      </ion-col>
+    </ion-row>
   </ion-grid>
-  <div *ngIf="counters.length > 0">
+  <div *ngIf="filteredCounters.length > 0">
     <ion-grid class="ion-margin ion-text-center">
       <ion-row style="border-bottom: groove">
         <ion-col size="3">
@@ -113,7 +140,7 @@
           <ion-label>Options:</ion-label>
         </ion-col>
       </ion-row>
-      <div *ngFor="let counter of counters">
+      <div *ngFor="let counter of filteredCounters">
         <ion-row style="border-bottom: groove">
           <ion-col size="3">
             {{counter.amount}}
