--- a/src/app/pages/counters/counters.page.scss
+++ b/src/app/pages/counters/counters.page.scss
@@ -10,3 +10,10 @@
     }
   }
   }
+
+  @media (min-width: 281px) {
+    .option_icon {
+      //ion margin right
+      margin-right: 10px;
+    }
+  }
