--- a/src/app/pages/counters/counters.page.html
+++ b/src/app/pages/counters/counters.page.html
@@ -121,7 +121,7 @@
         </ion-button>
       </ion-col>
       <ion-col>
-        <ion-button (click)="onFilter('custom')" expand="block" [disabled]="selectedFilter === 'custom'">
+        <ion-button (click)="onFilter('custom')" expand="block">
           Custom
         </ion-button>
       </ion-col>
